apex/grammar.js
    source_file: ($) => repeat($.declaration),

    // =========================================================================
    // DECLARATIONS
    // =========================================================================

    /**
     * A declaration is any top-level or nested construct that defines
     * a named entity: class, interface, enum, or trigger.
     */
    class_declaration: ($) => seq(
      optional($.modifiers),
      ci("class"),
      field("name", $.identifier),
      optional($.superclass),
      optional($.interfaces),
      field("body", $.class_body)
    ),

    /**
     * Superclass clause — extends keyword.
     * Example: extends TriggerHandler
     */
    superclass: ($) => seq(ci("extends"), $.type_identifier),

    /**
     * Implements clause — one or more interface names.
     * Example: implements Queueable, Database.Batchable
     */
    interfaces: ($) => seq(ci("implements"), commaJoined1($.type_identifier)),

    /**
     * Class body — contains field declarations, methods, inner classes, etc.
     */
    class_body: ($) => seq(
      "{",
      repeat($._class_body_declaration),
      "}"
    ),

    /**
     * Items that can appear inside a class body.
     */
    _class_body_declaration: ($) => choice(
      $.field_declaration,
      $.method_declaration,
      $.constructor_declaration,
      $.property_declaration,
      $.class_declaration,      // Inner classes
      $.interface_declaration,  // Inner interfaces
      $.enum_declaration,       // Inner enums
      ";",  // Empty statement (allowed in class body)
    ),

    // --- Method, Constructor, Property ---
    method_declaration: ($) => seq(
      optional($.modifiers),
      field("type", $._type),
      field("name", $.identifier),
      field("parameters", $.formal_parameters),
      choice(field("body", $.block), ";")  // abstract methods have no body
    ),

    constructor_declaration: ($) => seq(
      optional($.modifiers),
      field("name", $.identifier),
      field("parameters", $.formal_parameters),
      field("body", $.block)
    ),

    property_declaration: ($) => seq(
      optional($.modifiers),
      field("type", $._type),
      field("name", $.identifier),
      "{",
      optional($.getter),
      optional($.setter),
      "}"
    ),

    getter: ($) => seq(optional($.modifiers), ci("get"), choice($.block, ";")),
    setter: ($) => seq(optional($.modifiers), ci("set"), choice($.block, ";")),

    formal_parameters: ($) => seq("(", optional(commaJoined1($.formal_parameter)), ")"),
    formal_parameter: ($) => seq(
      optional($.modifiers),
      field("type", $._type),
      field("name", $.identifier)
    ),

    // --- Interface Declaration ---

    /**
     * Interface declaration.
     *
     * Example:
     *   public interface Notifiable {
     *     void notify(String message);
     *   }
     */
    interface_declaration: ($) => seq(
      optional($.modifiers),
      ci("interface"),
      field("name", $.identifier),
      optional(seq(ci("extends"), commaJoined1($.type_identifier))),
      field("body", $.interface_body)
    ),

    interface_body: ($) => seq("{", repeat(choice($.field_declaration, ";")), "}"),

    // --- Enum Declaration ---

    /**
     * Enum declaration — defines a fixed set of constants.
     *
     * Example:
     *   public enum Season { SPRING, SUMMER, FALL, WINTER }
     */
    enum_declaration: ($) => seq(
      optional($.modifiers),
      ci("enum"),
      field("name", $.identifier),
      field("body", $.enum_body)
    ),

    enum_body: ($) => seq(
      "{",
      optional(seq(
        $.enum_constant,
        repeat(seq(",", $.enum_constant)),
        optional(",")  // Trailing comma is allowed
      )),
      "}"
    ),

    enum_constant: ($) => $.identifier,

    // --- Trigger Declaration ---

    /**
     * Trigger declaration — Apex-specific construct for database event handling.
     *
     * Triggers fire automatically when DML operations occur on sObjects.
     * They CANNOT be called directly; they're invoked by the Salesforce platform.
     *
     * Syntax:
     *   trigger TriggerName on SObjectName (event1, event2, ...) { body }
     *
     * Valid events: before insert, after insert, before update, after update,
     *               before delete, after delete, after undelete
     *
     * Example:
     *   trigger AccountTrigger on Account (before insert, after insert) {
     *     // trigger logic
     *   }
     */
    trigger_declaration: ($) => seq(
      ci("trigger"),
      field("name", $.identifier),
      ci("on"),
      field("object", $.identifier),
      "(",
      commaJoined1($.trigger_event),
      ")",
      field("body", $.trigger_body)
    ),

    /**
     * Trigger event — combines timing (before/after) with DML operation.
     */
    trigger_event: ($) => seq(
      choice(ci("before"), ci("after")),
      choice(ci("insert"), ci("update"), ci("delete"), ci("undelete"))
    ),

    trigger_body: ($) => seq("{", repeat($.statement), "}"),

    // =========================================================================
    // MODIFIERS
    // =========================================================================

    /**
     * Modifiers — zero or more keywords that modify a declaration or member.
     *
     * Apex modifiers include:
     *   Access: public, private, protected, global
     *   Sharing: with sharing, without sharing, inherited sharing
     *   Other: static, final, override, virtual, abstract, transient, testMethod
     *
     * These are case-insensitive in Apex.
     */
    modifiers: ($) => repeat1(choice($.annotation, $.modifier)),

    annotation: ($) => seq(
      "@",
      field("name", $._name),
      optional(field("arguments", $.annotation_arguments))
    ),

    annotation_arguments: ($) => seq(
      "(",
      choice(
        $._literal,
        seq(
          $.annotation_key_value,
          repeat(seq(optional(","), $.annotation_key_value))
        )
      ),
      ")"
    ),

    annotation_key_value: ($) => seq(
      field("key", $.identifier),
      "=",
      field("value", $.expression)
    ),

    modifier: ($) => choice(
      // Access modifiers
      ci("public"),
      ci("private"),
      ci("protected"),
      ci("global"),        // Apex-specific: visible across namespaces
      // Sharing modifiers (Apex-specific: control record-level security)
      ci("with sharing"),
      ci("without sharing"),
      ci("inherited sharing"),
      // Other modifiers
      ci("static"),
      ci("final"),
      ci("override"),
      ci("virtual"),       // Apex-specific: class/method can be extended/overridden
      ci("abstract"),
      ci("transient"),     // Apex-specific: field not serialized in Visualforce
      ci("testMethod"),    // Deprecated: use @IsTest annotation instead
    ),

    // =========================================================================
    // TYPE SYSTEM
    // =========================================================================

    /**
     * Type reference — used in variable declarations, method signatures, etc.
     * This is a hidden rule; one of its alternatives appears in the tree.
     */
    _type: ($) => choice(
      $.type_identifier,
      $.generic_type,
      $.array_type,
      $.void_type,
    ),

    /**
     * Type identifier — a simple or dotted type name.
     *
     * Examples:
     *   String              (primitive type)
     *   Account             (sObject type)
     *   Database.Batchable  (namespaced type)
     *   My_Custom__c        (custom sObject)
     */
    type_identifier: ($) => choice(
      $.identifier,
      $.scoped_type_identifier,
    ),

    /**
     * Scoped type — a dot-separated type path.
     *
     * Examples:
     *   Database.Batchable
     *   System.Label
     *   Schema.SObjectField
     */
    scoped_type_identifier: ($) => seq(
      $.identifier, repeat1(seq(".", $.identifier))
    ),

    /**
     * Generic type — a type with type parameters.
     *
     * Apex supports generics only for collection types (List, Set, Map)
     * and some system types (Iterable, Iterator).
     *
     * Examples:
     *   List<Account>
     *   Map<String, List<Contact>>
     *   Set<Id>
     */
    generic_type: ($) => seq(
      $.type_identifier,
      $.type_arguments
    ),

    type_arguments: ($) => seq(
      "<", commaJoined1($._type), ">"
    ),

    /**
     * Array type — Apex supports Java-style array syntax.
     *
     * Examples:
     *   String[]
     *   Account[]
     *   Integer[]
     *
     * Note: In practice, List<String> is preferred over String[] in Apex,
     * but both syntaxes are valid and must be parsed.
     */
    void_type: ($) => ci("void"),

    // =========================================================================
    // FIELD DECLARATIONS
    // =========================================================================

    /**
     * Field declaration — a variable defined at the class level.
     *
     * Examples:
     *   private String name;
     *   public static Integer count = 0;
     *   private final Boolean IS_ACTIVE = true;
     *   List<Account> accounts = new List<Account>();
     */
    field_declaration: ($) => seq(
      optional($.modifiers),
      field("type", $._type),
      commaJoined1($.variable_declarator),
      ";"
    ),

    /**
     * Variable declarator — name with optional initializer.
     *
     * Examples:
     *   name                  (no initializer)
     *   count = 0             (with initializer)
     *   IS_ACTIVE = true      (with literal initializer)
     */
    variable_declarator: ($) => seq(
      field("name", $.identifier),
      optional(seq("=", field("value", $._variable_initializer)))
    ),

    _variable_initializer: ($) => $.expression,

    // =========================================================================
    // EXPRESSIONS
    // =========================================================================

    /**
     * Expression supertype — encompasses all possible expressions.
     * This will be expanded significantly in Steps 5-6.
     */
    _lhs_expression: ($) => choice(
      $.identifier,
      $.field_access,
      $.array_access
    ),

    assignment_expression: ($) => prec.right(PREC.ASSIGN, seq(
      field("left", $._lhs_expression),
      choice("=", "+=", "-=", "*=", "/=", "%=", "&=", "^=", "|=", "<<=", ">>=", ">>>="),
      field("right", $.expression)
    )),

    binary_expression: ($) => choice(
      ...[
        ["||", PREC.OR],
        ["&&", PREC.AND],
        ["|", PREC.BIT_OR],
        ["^", PREC.BIT_XOR],
        ["&", PREC.BIT_AND],
        ["==", PREC.EQUALITY],
        ["!=", PREC.EQUALITY],
        ["<>", PREC.EQUALITY],
        ["===", PREC.EQUALITY],
        ["!==", PREC.EQUALITY],
        ["<", PREC.REL],
        ["<=", PREC.REL],
        [">", PREC.REL],
        [">=", PREC.REL],
        ["<<", PREC.SHIFT],
        [">>", PREC.SHIFT],
        [">>>", PREC.SHIFT],
        ["+", PREC.ADD],
        ["-", PREC.ADD],
        ["*", PREC.MULT],
        ["/", PREC.MULT],
        ["%", PREC.MULT],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field("left", $.expression),
          operator,
          field("right", $.expression)
        ))
      )
    ),

    unary_expression: ($) => prec.left(PREC.UNARY, seq(
      choice("+", "-", "!", "~"),
      $.expression
    )),

    update_expression: ($) => prec.left(PREC.UNARY, choice(
      seq(choice("++", "--"), $.expression),
      seq($.expression, choice("++", "--"))
    )),

    ternary_expression: ($) => prec.right(PREC.TERNARY, seq(
      field("condition", $.expression),
      "?",
      field("consequence", $.expression),
      ":",
      field("alternative", $.expression)
    )),

    null_coalescing_expression: ($) => prec.right(PREC.NULL_COALESCE, seq(
      field("left", $.expression),
      "??",
      field("right", $.expression)
    )),

    cast_expression: ($) => prec.right(PREC.CAST, seq(
      "(", field("type", $._type), ")", field("value", $.expression)
    )),

    instanceof_expression: ($) => prec.left(PREC.REL, seq(
      field("left", $.expression),
      ci("instanceof"),
      field("right", $._type)
    )),

    new_expression: ($) => prec.right(PREC.OBJ_INST, seq(
      ci("new"),
      field("type", $._type),
      choice(
        field("arguments", $.argument_list),
        $.array_initializer
      )
    )),

    argument_list: ($) => seq("(", optional(commaJoined1($.expression)), ")"),
    
    array_initializer: ($) => seq("{", optional(commaJoined1($.expression)), "}"),

    method_invocation: ($) => prec.left(PREC.OBJ_ACCESS, seq(
      optional(seq(field("object", $.expression), choice(".", "?."))),
      field("name", $.identifier),
      field("arguments", $.argument_list)
    )),

    field_access: ($) => prec.left(PREC.OBJ_ACCESS, seq(
      field("object", $.expression),
      choice(".", "?."),
      field("field", $.identifier)
    )),

    array_access: ($) => prec.left(PREC.ARRAY, seq(
      field("array", $.expression),
      "[",
      field("index", $.expression),
      "]"
    )),

    /**
     * Inline SOQL expression — the [SELECT ... FROM ...] construct inside Apex.
     *
     * Uses balanced-bracket parsing via the private _soql_content rule so that
     * nested subqueries and expressions do not prematurely terminate the node.
     *
     * The _soql_content rule is private (underscore prefix) so it is inlined by
     * tree-sitter and never appears as a named node in the AST. Only
     * soql_expression is visible to consumers and injection rules.
     *
     * Examples:
     *   [SELECT Id FROM Account]
     *   [SELECT Id, (SELECT Name FROM Contacts) FROM Account]
     *   [SELECT Id FROM Account WHERE Id IN :idList]
     */
    primary_expression: ($) => choice(
      $.identifier,
      $._literal,
      $.this,
      $.super,
      $.parenthesized_expression,
    ),

    _literal: ($) => choice(
      $.int,
      $.decimal,
      $.string_literal,
      $.boolean,
      $.null_literal,
    ),

    string_literal: ($) => /'(\\[nNrRtTbBfFuU"'_%\\]|[^\\'])*'/,
    int: ($) => token(/[0-9]+(_[0-9]+)*/),
    boolean: ($) => choice(ci("true"), ci("false")),
    null_literal: ($) => ci("null"),

    // =========================================================================
    // STATEMENTS (Placeholder — expanded in Step 5)
    // =========================================================================

    /**
     * Statement supertype — placeholder for Step 5.
     * Currently only allows expression statements and blocks.
     */
    return_statement: ($) => seq(ci("return"), optional($.expression), ";"),
    expression_statement: ($) => seq(
      choice(
        $.assignment_expression,
        $.update_expression,
        $.method_invocation,
        $.new_expression
      ),
      ";"
    ),

    block: ($) => seq("{", repeat($.statement), "}"),

    /**
     * Local variable declaration — inside a method or block.
     *
     * Example:
     *   String name = 'hello';
     *   Integer count = 0;
     */
    local_variable_declaration: ($) => seq(
      optional($.modifiers),
      field("type", $._type),
      commaJoined1($.variable_declarator),
      ";"
    ),

    // =========================================================================
    // IDENTIFIERS
    // =========================================================================

    /**
     * Identifier — matches class names, field names, method names, etc.
     * Must start with a letter, can contain letters, digits, and underscores.
     */
    identifier: ($) => /[A-Za-z][A-Za-z\d_]*/,

    block_comment: ($) => seq(
      "/*",
      /[^*]*\*+([^/*][^*]*\*+)*/,
      "/"
    ),
  },
});
