apex/test/corpus/literals.txt
==================
String literal in field
==================

public class T {
    String s = 'hello world';
}

---

(source_file
  (class_declaration
    (modifiers
      (modifier))
    name: (identifier)
    body: (class_body
      (field_declaration
        type: (type_identifier
          (identifier))
        (variable_declarator
          name: (identifier)
          value: (string_literal))))))

==================
Integer literal
==================

public class T {
    Integer n = 42;
}

---

(source_file
  (class_declaration
    (modifiers
      (modifier))
    name: (identifier)
    body: (class_body
      (field_declaration
        type: (type_identifier
          (identifier))
        (variable_declarator
          name: (identifier)
          value: (int))))))

==================
Boolean literals
==================

public class T {
    Boolean a = true;
    Boolean b = false;
}

---

(source_file
  (class_declaration
    (modifiers
      (modifier))
    name: (identifier)
    body: (class_body
      (field_declaration
        type: (type_identifier
          (identifier))
        (variable_declarator
          name: (identifier)
          value: (boolean)))
      (field_declaration
        type: (type_identifier
          (identifier))
        (variable_declarator
          name: (identifier)
          value: (boolean))))))

==================
Null literal
==================

public class T {
    Object o = null;
}

---

(source_file
  (class_declaration
    (modifiers
      (modifier))
    name: (identifier)
    body: (class_body
      (field_declaration
        type: (type_identifier
          (identifier))
        (variable_declarator
          name: (identifier)
          value: (null_literal))))))
